--- a/style.css
+++ b/style.css
@@ -1,29 +1,26 @@
-body{
-    text-align: center;
-}
-h1{
-    font-size:40px;
-    font-family: sans-serif;
-    font-weight: 200;
-    
-}
-#app,#game,#chatbot{
+#app {
     width: 100%;
     height: 800px;
-    background-color: cornflowerblue;
+    background-color: aliceblue;
+}
+
+.container
+{
+    text-align: center;
+}
+
+#myCarousel{
+    background-color: orangered;
+}
+#myCarousel img{
+    height: 300px;
+    margin-top: 35px;
     
-}
-img{
-    transition: transform 0.2s;
-    
-}
-img:hover{
-    transform: scale(0.9)
-}
-.line{
-    height: 6px;
-    background-color: black;
-    width: 70px;
-    margin: 8px auto;
+}  
+.carousel-inner p{
+  margin-bottom: 15px;
+    margin-top: 15px;
+    color:aliceblue;
+    font-size: 20px;
     
 }
